<resources>
    <string name="app_name">SmartFarming</string>
    <string name="title_activity_crop_practices">CropPracticesActivity</string>
    <string name="paddy_brown_leaf_spot">Symptoms: \n1. Infected seedlings have small, circular, yellow brown or brown lesions that may girdle the coleoptile and distort primary and secondary leaves. \n2. Starting at tillering stage, lesions can be observed on the leaves. They are initially small, circular, and dark brown to purple-brown. 3. Fully developed lesions are circular to oval with a light brown to gray center, surrounded by a reddish brown margin caused by the toxin produced by the fungi. \n\nManagement: \n1. Seed treatment with Captan or Thiram at 2.0g/kg of seed \n2. Spraying tricyclazole followed by spraying of mancozeb + tricyclazole at tillering and late booting stages gave good control of the disease. 3. use Propineb 70% WP - 400 g/acre \n4. Seed treatment with Pseudomonas fluorescens @10g/kg of seed followed by seedling dip @ of 2.5 kg/ha dissolved in 100 litres and dipping for 30 minutes.</string>
    <string name="cauliflower_club_root">1. Club root \nControl measures: \nSeed treatment with Pseudomonas fluorescens at 10 g/kg of seeds, followed by seedling dip @ 5g/ I and soil application @ 2.5 kg/ha along with 50 kg FYM before planting. \nDip the seedlings in Carbendazim solution 2 g/l for 20 minutes. \n• Drench the soil around the seedlings in the main field with Carbendazim @ 1 g/l of water.</string>
    <string name="cauliflower_leaf_spot">2. Leaf Spot \nLeaf spot can be controlled by spraying or Carbendazim 1 g/lit</string>
    <string name="cauliflower_leaf_blight">3. Leaf Blight \nLeaf blight can be controlled by spraying Mancozeb @ 2.5 g/litre.</string>
    <string name="potato_sowing1">Methods of Planting: \nThere are three methods of planting in India \n\nPlanting on ridges: \nAfter preparation of field, ridges are made at a distance of 5–60 cm with the help of spade, bullock carts or by tractors. Planting of potato is done on the ridges manually. \n\n1. Flat method: Planting of potato is done on the flat surface in shallow furrows. Ridges are made after germination when plants attain 10–12 cm height. This method is suitable for light soils. Later on two to three earthings are done to make the ridges thick. \n\nPlanting potatoes on flat surface followed by ridges: In this method field is prepared and then shallow furrows are opened on the flat surface. Potatoes are planted in furrows and immediately after planting tubers, small ridges are made. Later on these ridges are made thick by earthing up of the side soil. \n\nPlanting Time: \nTo secure high yields, it is essential to plant the potatoes at the optimum time. The best time of planting is when the maximum and minimum temperatures are from 30°C to 32°C and 18°C to 20°C, respectively. \n\nThe following time schedule should be followed for obtaining good yields. \na) Early crop-25th September to 10th October. \nb) Main crop-15th October to 25th October.</string>
    <string name="potato_sowing2">Propagation: \n• Potato is mostly cultivated by planting tubers. Purity of the cultivars and healthy seed tubers are the primary requirements for a successful crop. However, seed tuber is the costliest input in potato cultivation. \n\nThe tuber seed should be disease free, well–sprouted and 30–40 g each in weight. It is advisable to use the entire seed tuber for planting. Hill tuber seeds are split into pieces and planted late in winter when they do not decay due to mild temperatures. \n\n• Tubers should be cut longitudinally through the crown eye and the weight of the cut piece should be around 30–40 g. \n\n• Usually the seed tubers are cut with a knife just and treated with a fungicide (Captan or thiram @3g/litre of water) before planting. Before cutting the seed tuber, the knife should be disinfected with Potassium Permanganate solution. \n\nDormancy Breaking: \nCut the tubers in pieces having at least three healthy eyes and dip in 1% solution of thiourea for one hour. The planting should be done just after treatment or kept in wet gunny bags for one night. \n\nSeed Rate: \nThe seed requirements for an acre on the basis of seed size are given below: Large size– 10–12 q/acre. \nMedium size– 7–10 q/acre Small size– 4–6 q/ acre.</string>
    <string name="potato_sowing3">True Potato Seed (TPS): \n\n• To overcome the above problems True Potato Seed (TPS) is used as planting material. TPS is a botanical seed developed in the berry of the plant as a result of fertilization. \n\n• In TPS technique, the normal seed rate (2.5 t/ ha) of potato is drastically reduced to only about 200g of TPS, thereby, saving huge quantities of food material for table purposes. \n\n• Potato crop can be raised from TPS using seedling transplants or through seedling- tubers produced in preceding crop season. \n\n• In former method, the TPS seedlings raised in nursery beds are transplanted in the field and grown to maturity. While, in latter, the TPS seedlings are grown to maturity in nursery beds to obtain seedling-tubers. These seedling-tubers are used as a seed for raising normal potato crop in next season.</string>
    <string name="potato_early_blight">Symptoms : \nThe infection appears on lower leaves with necrotic spots having concentric rings. The fungus survives in the soil. In diseased plant debris. \nThe collateral host is tomato. High moisture and low temperature are favorable for disease. \n\nControl Measures : \n1. Follow crop rotation. \n2. Collect and bum plant debris after harvesting. \n3. Start sprays the crop Dithane M-45 at 0.2 per cent 30 to 35 days after planting and repeat 10 to 15 days interval if infestation is severe spray with Acrobat or curzate @ Ig/lit. \n4. Grow early blight tolerant varieties such as Kufri Naveen, Kufri Sindhuri and Kufri Jeevan.</string>
    <string name="potato_late_blight">Symptoms: \nThe infection appears at the tips or edges of the lower leaves with circular or irregular water soaked spots. White downy fungus growth appears on the underside of the leaves around the spots. \n\nCloudy weather is conducive for very fast spread of the disease. In case of sever incidence all above ground parts may show rotting. Later the disease may spread to tubers and initiate rotting. \n\nControl Measures : \n1. Plant only healthy disease free certified seed tubers. \n2. Spray the crop thoroughly with diathane M-45 (2.0 g/lit) or diathane Z- 78 (2.5 g/lit) well in advance to general appearance of disease. The spraying operations should remain continue at narrow interval of 5 to 6 days during cloudy weather with Acrobat or Equation pro @ 1g/lit Dig out tubers when foliage is completely dry or cleaned. \n3. Grow late blight resistance varieties like Kufri Navaharl. \n4. Avoid applying in excess nitrogen and irrigation.</string>
    <string name="potato_scurf">Symptom : \nThe infected plants killed, stem canker may also be formed. Affected plants may form aerial tubers. \nOn tubers, black sclerotial bodies are formed. It is a soil as well as tuber borne disease. \n\nControl Measures : \n1. Always sow certified seeds \n2. Treat the seed tubers with any organo mercurial fungicides containing 6 per cent mercury \n{agallol, aretan, emisan etc.) for about 5 to 10 minutes before the planting and also seed tubers before keeping in the cold storage. \n3. Dip the tubers in 1.75 per cent solution of sulfuric acid for 20 minutes.</string>
    <string name="potato_common_scab">Symptom : \nIt survives in soil years together and on infected tubers in cold storage. It may also spread through manure. Affected tubers show the superficial roughened areas of corky tissue, often slightly below the plane of healthy skin of tubers. Low soil moisture is favourable for proliferation of causal pathogen. \nControl Measures : \n1. Obtain healthy, disease free seed tubers for planting. \n2. Disinfect the tubers by dipping in suspension of mercurial fungicide e.g. emisan-6 or agallol- 6 at 0.25 per cent concentration for 5 minutes. \n3. Plant the tubers shallow and Keep the soil wet during tuberization. \n4. Follow crop rotation with non-host crops including beets, carrot etc. \n5. Maintain soil pH 5.0 to 5.3.</string>
    <string name="potato_charcoal_rot">Symptom : \nThe roots of the affected plants become brown in colour. The rotting starts on the stem portion. The skin of the stern becomes ash coloured. Line dark lesions appear at the lenticels of the tubers and also round the stern end of tuber. \nCharcoal rot is common during the hot and dry months in late season crops. \n\nControl Measures : \n1. Obtain disease free seed tubers for planting. Hill potatoes are nearly free from this pathogen. Alankar or Kufri Chandramukhi. \n2. Grow early maturing varieties such as Kufri \n3. Irrigate crop at regular intervals. \n4. Seed tubers may be treated with agalal-6 or aretan at 0.25 per cent solution before storage. The treated tubers should not be eaten.</string>
    <string name="cabbage_damping_off">1. Damping Off: (Pythium aphinidermatum) \nSymptoms : \nDamping off of Cabbage occurs in two stages, i.e. the pre–emergence and the post– emergence phase. \nIn the pre–emergence the phase the seedlings are killed just before they reach the soil surface. The young radical and the plumule are killed and there is complete rotting of the seedlings. \nThe post–emergence phase is characterized by the infection of the young, juvenile tissues of the collar at the ground level. \n\nManagement : \n• Seed treatment with Thiram or Captan @ 2.5–3 g/kg of seed. \n• The seedlings should be treated with Hexaconazole 5% + Captan 70% WP or Metalaxyl-M + 640 g/kg Mancozeb @ 2g/l of water.</string>
    <string name="cabbage_black_rot">2. Black rot: Xanthomonas campestris pv. campestris \nSymptoms : \nFirst appear as chlorotic or yellow (angular) areas near the leaf margins \nYellow area extends to veins and midrib forming characteristic \'v\' shaped chlorotic spots which later turn black \nVeins and veinlets turn brown and finally black Vascular blackening extend beyond affected veins to midrib, petiole and stem \nIn advanced stages, infection may reach the roots system and blackening of vascular bundles occurs. Bacterial ooze can also be seen on affected parts \nIf the infection is early, the plants wilt and die. \n\nManagement : \nAvoid planting in fields infested with weeds in the crucifer family, which may harbor the black rot organism from previous years. \nCrop rotation for every once in two years. \nSeed treatment with 0.5 g. Streptocyclene + 3.0 g. Copper oxychloride in a lit. water. \nSpray 0.5 g. Streptocyclene or 0.5 g. K- cyclone or 100 mg. Tetracyclene hydroxide or 0.5 g.Streptomycin sulphate with 3.0 g. Copperoxychloride 50 WP/liter water.</string>
    <string name="cabbage_downey_mildew">3. Downy Mildew (Peronospora parasitica) \nSymptoms : \nSmall purplish brown spots on under surface of leaves \nSmall, pale yellow angular spots on upper surface of leaves, with downy growth on theunder surface. The spots coalesce and the leaves shrivel and dries up prematurely \nIn cabbage, these spots expose the heads to soft rot. \nStems show dark brown and depressed lesions or streaks which later develop downy growth of fungus. \n\nManagement : \nRemoval of crop debris and weed hosts may reduce inoculum. \nPractice rotation with non-brassica crops. Spray 2.0 g. Metalaxyl- MZ 72 WP or 2.0 g. Cymoxanil + Mancozeb/lit.water. Chlorothalonil 75 WP @2gm/liter and Difenoconazole 250 EC @ 2ml/liter per acre.</string>
</resources>