<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTitle"
        android:padding="20dp"
        android:paddingTop="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/potato_sowing1"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:text="Selection of Variety / Planting material"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text2"
                android:text="@string/potato_sowing2"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text3"
                android:text="True Potato Seed (TPS)"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text4"
                android:text="@string/potato_sowing3"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

        </RelativeLayout>

    </ScrollView>
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="4. Sowing"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold" />


</RelativeLayout>