<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTitle"
        android:padding="20dp"
        android:paddingTop="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Early Blight"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:text="@string/potato_early_blight"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imagepotatoearlyblight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text2"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/potatoearlyblight" />


            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagepotatoearlyblight"
                android:text="Late Blight"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text3"
                android:text="@string/potato_late_blight"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imagepotatolateblight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text4"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/potatolateblight" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagepotatolateblight"
                android:text="Scurf"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text5"
                android:text="@string/potato_scurf"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text6"
                android:text="Common Scab of Potato"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text7"
                android:text="@string/potato_common_scab"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text8"
                android:text="Charcoal Rot"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text9"
                android:text="@string/potato_charcoal_rot"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imagepotatocharcoalrot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text10"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/potatocharcoalrot" />

        </RelativeLayout>

    </ScrollView>
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="7. Disease &amp; Their Management"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold" />
</RelativeLayout>