<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTitle"
        android:padding="20dp"
        android:paddingTop="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Damping off"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:text="@string/cabbage_damping_off"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imagecabbagedampingoff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text2"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/cabbagedampingoff" />


            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagecabbagedampingoff"
                android:text="Black rot"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text3"
                android:text="@string/cabbage_black_rot"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imagecabbageblackrot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text4"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/cabbageblackrot" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagecabbageblackrot"
                android:text="Downey mildew"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text5"
                android:text="@string/cabbage_downey_mildew"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imagecabbagedowneymildew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text6"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/cabbagedowneymildew" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagecabbagedowneymildew"
                android:text="White Rust"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text7"
                android:text="@string/potato_common_scab"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

        </RelativeLayout>

    </ScrollView>
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="8. Disease &amp; Their Management"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold" />
</RelativeLayout>