<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTitle"
        android:padding="20dp"
        android:paddingTop="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Club root"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:text="@string/cauliflower_club_root"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageclubroot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text2"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/cauliflowerclubroot" />


            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageclubroot"
                android:text="Leaf Spot"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text3"
                android:text="@string/cauliflower_leaf_spot"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text4"
                android:text="Leaf Blight"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text5"
                android:text="@string/cauliflower_leaf_blight"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/imageleafblight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text6"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/cauliflowerleafblight" />

        </RelativeLayout>

    </ScrollView>
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="7. Disease &amp; Their Management"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold" />

</RelativeLayout>